--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^17.0.8"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0"
+  }
 }
