--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^17.0.8"
+    "@types/multistream": "^2.1.2",
+    "@types/node": "^17.0.8",
+    "@types/temp": "^0.9.1",
+    "@types/uuid": "^8.3.4"
   },
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "multistream": "^4.1.0",
+    "temp": "^0.9.4",
+    "uuid": "^8.3.2"
   }
 }
